# nextage_core

./: .gitignore  .gitmodules  README.md
dynamic_planning_scene/: CMakeLists.txt  package.xml
dynamic_planning_scene/meshes/: base_plate.stl  pcb.stl  small_hob.dae  small_hob.stl  small_hob_pivot_in_center.stl  tool_box.stl
dynamic_planning_scene/src/: DynamicPlanningScene.py  EluxPlanningSceneNode.py  TFDummyNode.py
nextage_bringup/: CMakeLists.txt  package.xml
nextage_bringup/launch/: roscore.launch
nextage_bringup/scripts/: install  install_core_only  roscore
nextage_cam_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
nextage_cam_moveit_config/config/: fake_controllers.yaml  gazebo_nextage.urdf  joint_limits.yaml  kinematics.yaml  nextage.srdf  ompl_planning.yaml  stomp_planning.yaml
nextage_cam_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
nextage_core/: CMakeLists.txt  package.xml
nextage_core/launch/: hardware_interface.launch
nextage_description/: .gitignore  CMakeLists.txt  README.md  package.xml
nextage_description/config/: display_urdf.rviz
nextage_description/launch/: load.launch  view_urdf.launch
nextage_description/urdf/: nextage.urdf.xacro
nextage_gazebo/: CMakeLists.txt  package.xml
nextage_gazebo/config/: joint_calibration.xml  nextage_gazebo_control.yaml
nextage_gazebo/launch/: nextage.launch  nextagea.launch
nextage_gazebo/launch/include/: gazebo.launch  nextagea_control.launch
nextage_gazebo/scripts/: go_home  self_collision_check  unpause
nextage_hardware_interface/: CMakeLists.txt  dependencies.rosinstall  nextage_hw_plugin.xml  package.xml  readme.md
nextage_hardware_interface/arduino/: nextgae_estop.ino
nextage_hardware_interface/config/: controllers.yaml  hardware.yaml  joint_limits.yaml
nextage_hardware_interface/config/multiplot/: body.xml  left_arm.xml  right_arm.xml
nextage_hardware_interface/include/kspapi/: HRPcontroller.h  OpenHRPCommon.h  ViewSimulator.h  commonStatus.h  dioPlugin.h  jointAnglePlugin.h  servoPlugin.h  statusPlugin.h
nextage_hardware_interface/include/nextage_hardware_interface/: NextageAHardwareInterface.h
nextage_hardware_interface/launch/: nextage_hardware_interface.launch  nextage_safety.launch  nextage_startup.launch  start_streaming_controller.launch  start_trajectory_controllers.launch
nextage_hardware_interface/src/: NextageAHardwareInterface.cpp  NextageAHardwareInterface_node.cpp  nextage_safety  nextage_startup
nextage_hardware_interface/src/kspapi/: HRPcontroller.cc  OpenHRPCommon.cc  ViewSimulator.cc  commonStatus.cc  dioPlugin.cc  jointAnglePlugin.cc  servoPlugin.cc  statusPlugin.cc
nextage_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
nextage_moveit_config/config/: fake_controllers.yaml  nextage.srdf  ros_controllers.yaml  sensors_3d.yaml
nextage_moveit_config/launch/: NextageAOpen_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  gazebo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
nextagea_bringup/: CMakeLists.txt  package.xml
nextagea_bringup/launch/: roscore.launch
nextagea_bringup/scripts/: install  install_core_only  roscore
nextagea_description/: CMakeLists.txt  README.md  package.xml
nextagea_description/launch/: load.launch  view_urdf.launch
nextagea_description/urdf/: NextageAOpen.urdf.xacro  NextageAOpen_gazebo.urdf.xacro  NextageAOpen_gazebo_intel_realsense.urdf.xacro  NextageAOpen_gazebo_intel_realsense_with_Azure_topics.urdf.xacro  NextageAOpen_gazebo_kinect.urdf.xacro  NextageA_base.xacro  NextageA_robot.xacro  common.xacro  nextagea.urdf.xacro  nxao_gz_camera.xacro
nextagea_description/urdf/accessories/: d435.urdf.xacro
nextagea_description/urdf/base/: nextagea_base.xacro
nextagea_description/urdf/general/: common.xacro
nextagea_description/urdf/meshes/: WAIST_Link_mesh.dae
nextagea_description/urdf/robot/: nextagea_robot.xacro
nextagea_description/urdf/tool/: nextagea_tools.xacro  nxao_gz_camera.xacro
nextagea_gazebo/: CMakeLists.txt  package.xml
nextagea_gazebo/config/: joint_calibration.xml  nextagea_gazebo_control.yaml
nextagea_gazebo/launch/: nextagea.launch  nextagea_gazebo_control.launch  nextagea_world.launch  nextagea_world_intel_realsense.launch
nextagea_gazebo/launch/include/: gazebo.launch  nextagea_control.launch
nextagea_gazebo/scripts/: go_home  self_collision_check  switch_controller_from_botharms_to_rarm_larm  unpause
nextagea_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
nextagea_moveit_config/config/: NextageAOpen.srdf  joint_limits.yaml  kinematics.yaml  nextagea.srdf  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml
nextagea_moveit_config/launch/: NextageAOpen_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  (+6 more)
planning_scene_spawner/: CMakeLists.txt  package.xml
planning_scene_spawner/include/planning_scene_spawner/: planning_scene_spawn.h
planning_scene_spawner/nodes/: planning_scene_node.cpp
planning_scene_spawner/resources/: elux.stl  tables_hang_merged.stl
planning_scene_spawner/src/: planning_scene_spawn.cpp
(+4 files in other folders)
