<package format="2">
  <name>nextage_gazebo</name>
  <version>1.0.0</version>
  <description>nextage_gazebo package</description>
  <maintainer email="v.ivan@ed.ac.uk">Vladimir Ivan</maintainer>
  <license>BSD</license>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>
  <author email="iiysaito@opensource-robotics.tokyo.jp">Isaac I. Y. Saito</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>nextage_description</depend>
  <depend>nextage_moveit_config</depend>
  <depend>ros_controllers</depend>
  <depend>realsense2_description</depend>
  <test_depend>rostest</test_depend>
</package>
