<package format="2">
  <name>nextagea_description</name>
  <version>1.0.0</version>
  <description>nextagea_description package</description>
  <maintainer email="v.ivan@ed.ac.uk">Vladimir Ivan</maintainer>
  <license>BSD</license>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>
  <author email="iiysaito@opensource-robotics.tokyo.jp">Isaac I. Y. Saito</author>
  <author email="w.yasuda@opensource-robotics.tokyo.jp">Wataru Yasuda</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>xacro</build_depend>
  <exec_depend>xacro</exec_depend>
</package>
