<package>
  <name>nextagea_gazebo</name>
  <version>1.0.0</version>
  <description>nextagea_gazebo package</description>
  <maintainer email="v.ivan@ed.ac.uk">Vladimir Ivan</maintainer>
  <license>BSD</license>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>
  <author email="iiysaito@opensource-robotics.tokyo.jp">Isaac I. Y. Saito</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>nextagea_description</run_depend>
  <run_depend>nextagea_moveit_config</run_depend>
  <run_depend>ros_controllers</run_depend>
  <test_depend>rostest</test_depend>
</package>
